@@ -1,5 +1,10 @@
 2007-02-15  Abel Cheung  <abelcheung@gmail.com>
 
+	* wp-scorerender.php: Turn on transparency and turn off
+	"show input source" option by default.
+
+2007-02-15  Abel Cheung  <abelcheung@gmail.com>
+
 	* class.*.inc.php: Rename.
 	* wp-figurerender.php: Rename, and include renamed files.
 
